# AgentWatch

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  LICENSE  MASTERLIST_STATUS.md  MIGRATION-0.3.0.md  MIGRATION.md  PROGRESS.md  PR_BODY.md  README.md  RELEASE-0.3.0.md  SECURITY-BASELINE.md  VISION.md  agentwatch_masterlist.md  bandit-baseline.json  demo.py  docker-compose.yml  fix_contributing.py  fix_engine.py  how HEAD__main__.py  issue1.md  issue2.md  issue3.md  issue4.md  issue5.md  issues.md  mkdocs.yml  original_contributing.md  pyproject.toml
.claude/: ecc-tools.json  identity.json
.claude/commands/: api-endpoint-enhancement-with-tests.md  api-endpoint-rate-limiting-update.md  benchmark-suite-development-and-iteration.md  security-feature-or-fix-in-owasp-module.md  update-github-actions-workflow.md
.codex/: AGENTS.md
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: bandit.yml  ci-lint-typecheck.yml  ci.yml  coverage_security_guard.yml  docs.yml  labeler.yml  publish-pypi.yml  report-on-pr.yml  test-on-pr.yml  update-contributors.yml
agentwatch/: __init__.py  _version.py
agentwatch-landing/: fetch_stats.mjs  next.config.ts  package-lock.json  package.json
agentwatch-landing/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
agentwatch-landing/public/: contributors.json
agentwatch/adapters/: __init__.py  autogen.py  autogpt.py  base.py  claude_code.py  crewai.py  interception.py  langchain.py  langgraph.py  openai_agents.py  openclaw.py  smolagents.py
agentwatch/alerting/: __init__.py  channels.py  engine.py  filters.py  router.py
agentwatch/api/: api.ts  auth.py  entitlement.py  server.py  tenant_auth.py  websocket_stream.py
agentwatch/auditors/: __init__.py  anthropic.py  base.py  bft_auditor.py  consensus.py  google.py  openai.py  trust.py
agentwatch/circuit_breaker/: __init__.py  breaker.py  thresholds.py
agentwatch/cli/: __init__.py  animator.py  demo.py  init.py  main.py  mcp.py  ui.py  verify_env.py
agentwatch/core/: __init__.py  blast_radius.py  config.py  event_bus.py  http_forwarder.py  injection.py  loop_detector.py  models.py  policy_dsl.py  policy_loader.py  rate_limiter.py  risk.py  safety.py  schema.py  token_stream.py  watcher.py
agentwatch/cost/: __init__.py  caching.py  comparator.py  complexity_router.py  governance.py  predictor.py  reporting.py  router.py  semantic_cache.py  tracker.py
agentwatch/engines/: confidence.py  governance.py  memory.py  orchestration.py  replay.py  rollback.py  safety.py
agentwatch/eval/: __init__.py  runner.py
agentwatch/governance/: __init__.py  audit_log.py  causal.py  compliance_reporter.py  engine.py  gdpr.py  hipaa.py  iso42001.py  rbac.py  residency.py
agentwatch/hitl/: __init__.py  decisions.py  feedback.py  orchestrator.py  thresholds.py
agentwatch/infrastructure/: __init__.py  config.py  router.py
agentwatch/interceptors/: __init__.py  _init_.py  anthropic.py  base.py  factory.py  google.py  openai.py
agentwatch/memory/: __init__.py  causal_graph.py  decay.py  engine.py  governance.py  graph_query.py  health.py  identity.py  nlquery.py  resolver.py  temporal_decay.py  visualization.py
agentwatch/models/: cache.py  tenant.py
agentwatch/monitoring/: metrics.py
agentwatch/orchestration/: __init__.py  consensus.py  crew_context.py  dag.py  deadlock.py  discount.py  propagation.py  race_condition.py  shapley.py  spawning.py  trust.py
agentwatch/platform/: intelligence.py  prompts.py  sharing.py
agentwatch/plugins/: __init__.py  registry.py  sandbox.py
agentwatch/protocol/: benchmark.py  mcp_server.py  schema_v1.py
agentwatch/reasoning/: __init__.py  adversarial.py  auditor.py  benchmark.py  calibration.py  dual_eval.py  explainer.py  fingerprint.py  goal_drift.py  hallucination.py  quality.py  semantic_drift.py  trust_score.py
agentwatch/replay/: __init__.py  counterfactual.py  engine.py
agentwatch/rollback/: __init__.py  engine.py
agentwatch/scoring/: __init__.py  drift.py  silence.py
agentwatch/security/: __init__.py  abuse_detection.py  encryption.py  entitlement_store.py  exfiltration.py  key_storage.py  license.py  owasp.py  redaction.py  redteam.py  report.py  sandbox.py
agentwatch/telemetry/: __init__.py  otel.py  (+3 more)
api/: server.py
benchmarks/: README.md  bench_overhead.py  generate_cases.py  run_eval.py  test_cases.json
core/: circuit_breaker.py  circuit_breaker_registry.py  event_bus.py  models.py  schema.py
docs/: API-reference.md  TROUBLESHOOTING.md  alert_routing.md  architecture.md  architecture_detailed.md  custom_adapters_tutorial.md  developer_setup.md  getting-started.md  getting_started_extended.md  index.md  issue-498-resolved.md  security_ci.md
engines/: safety.py
frontend/: .eslintrc.json  Dockerfile  NEXT_15_MIGRATION.md  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
grafana/: agentwatch-dashboard.json
scripts/: owasp_test_harness.py  railway_deploy.py  verify_coverage.py
tests/: cli_surface.txt  conftest.py  repro_sync_safety.py  test_abuse_detection.py  test_adapter_crewai.py  test_adapter_langchain.py  test_adaptive_backoff.py  test_alerting.py  test_alerting_router.py  test_api_abuse.py  test_api_entitlement.py  test_api_safety_check.py  test_audit_persistence.py  test_auditor_transparency.py  test_blast_radius_causal.py  test_blast_radius_regression.py  test_caching.py  test_channels.py  test_circuit_breaker.py  test_cli_animator.py  test_cli_api_key.py  test_cli_check_env.py  test_cli_compare.py  test_cli_export.py  test_cli_redteam.py  test_cli_rollback.py  test_cli_server.py  test_cli_share.py  test_cli_status.py  test_cli_surface.py  test_cli_upgrade.py  test_cli_version.py  test_cli_watch.py  test_compliance.py  test_consensus_empty_proposals.py  test_core.py  test_coroutine_detection.py  test_cost.py  test_cost_reporting.py  test_cost_router.py  (+47 more)
(+92 files in other folders)
