[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch-ai"
version = "0.1.0"
description = "The Reliability, Safety, and Observability Layer for AI Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "AgentWatch Contributors" }
]
keywords = ["ai", "agents", "observability", "safety", "llm", "langchain", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "redis[hiredis]>=5.1.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.27.0",
  "typer[all]>=0.12.0",
  "rich>=13.8.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.1.0",
  "numpy>=1.26.0",
]
otel = [
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "opentelemetry-semantic-conventions>=0.48b0",
]
crypto = [
  "cryptography>=43.0.0",
]
langchain = [
  "langchain-core>=0.3.0",
]
autogpt = [
  # AutoGPT adapter works standalone; install AutoGPT separately
]
openclaw = [
  # OpenClaw adapter works standalone; install OpenClaw separately
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]
all = [
  "agentwatch[embeddings,otel,crypto,langchain]",
]

[project.scripts]
agentwatch = "agentwatch.cli.main:main"

[project.urls]
Homepage = "https://github.com/sreerevanth/AgentWatch"
Repository = "https://github.com/sreerevanth/AgentWatch"
Issues = "https://github.com/sreerevanth/AgentWatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentwatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = [
  "E501",   # line too long — handled by formatter
  "S101",   # assert — fine in tests
  "S104",   # hardcoded 0.0.0.0 — intentional in server code
  "S202",   # tarfile.extractall — needed for rollback restore
  "UP042",  # StrEnum — str+Enum is more explicit for Pydantic compat
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports: wildcard imports and implicit re-exports are intentional
"agentwatch/**/__init__.py" = ["F401", "F403"]
"agentwatch/*/__init__.py"  = ["F401", "F403"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "agentwatch/__main__.py",
    "agentwatch/adapters/autogen.py",
    "agentwatch/adapters/autogpt.py",
    "agentwatch/adapters/claude_code.py",
    "agentwatch/adapters/langchain.py",
    "agentwatch/adapters/langgraph.py",
    "agentwatch/adapters/openclaw.py",
    "agentwatch/adapters/smolagents.py",
    "agentwatch/alerting/engine.py",
    "agentwatch/api/server.py",
    "agentwatch/cli/demo.py",
    "agentwatch/cli/main.py",
    "agentwatch/cli/verify_env.py",
    "agentwatch/core/blast_radius.py",
    "agentwatch/core/event_bus.py",
    "agentwatch/core/http_forwarder.py",
    "agentwatch/core/injection.py",
    "agentwatch/core/loop_detector.py",
    "agentwatch/core/models.py",
    "agentwatch/core/policy_dsl.py",
    "agentwatch/core/risk.py",
    "agentwatch/core/safety.py",
    "agentwatch/core/schema.py",
    "agentwatch/core/watcher.py",
    "agentwatch/cost/anomaly.py",
    "agentwatch/cost/comparator.py",
    "agentwatch/cost/governance.py",
    "agentwatch/cost/roi.py",
    "agentwatch/cost/router.py",
    "agentwatch/cost/tracker.py",
    "agentwatch/governance/causal.py",
    "agentwatch/governance/engine.py",
    "agentwatch/governance/eu_ai_act.py",
    "agentwatch/governance/gdpr.py",
    "agentwatch/governance/hipaa.py",
    "agentwatch/governance/iso42001.py",
    "agentwatch/governance/rbac.py",
    "agentwatch/governance/reports.py",
    "agentwatch/governance/residency.py",
    "agentwatch/memory/causal_graph.py",
    "agentwatch/memory/decay.py",
    "agentwatch/memory/engine.py",
    "agentwatch/memory/governance.py",
    "agentwatch/memory/health.py",
    "agentwatch/memory/identity.py",
    "agentwatch/memory/nlquery.py",
    "agentwatch/memory/resolver.py",
    "agentwatch/memory/visualization.py",
    "agentwatch/orchestration/consensus.py",
    "agentwatch/orchestration/crew_context.py",
    "agentwatch/orchestration/dag.py",
    "agentwatch/orchestration/deadlock.py",
    "agentwatch/orchestration/engine.py",
    "agentwatch/orchestration/propagation.py",
    "agentwatch/orchestration/shapley.py",
    "agentwatch/orchestration/spawning.py",
    "agentwatch/orchestration/trust.py",
    "agentwatch/platform/cloud.py",
    "agentwatch/platform/eval_builder.py",
    "agentwatch/platform/intelligence.py",
    "agentwatch/platform/prompts.py",
    "agentwatch/platform/sharing.py",
    "agentwatch/plugins/registry.py",
    "agentwatch/plugins/sandbox.py",
    "agentwatch/protocol/badge.py",
    "agentwatch/protocol/benchmark.py",
    "agentwatch/protocol/mcp_server.py",
    "agentwatch/protocol/schema_v1.py",
    "agentwatch/reasoning/auditor.py",
    "agentwatch/reasoning/benchmark.py",
    "agentwatch/reasoning/calibration.py",
    "agentwatch/reasoning/dual_eval.py",
    "agentwatch/reasoning/explainer.py",
    "agentwatch/reasoning/fingerprint.py",
    "agentwatch/reasoning/goal_drift.py",
    "agentwatch/reasoning/hallucination.py",
    "agentwatch/reasoning/quality.py",
    "agentwatch/reasoning/semantic_drift.py",
    "agentwatch/reasoning/trust_score.py",
    "agentwatch/replay/counterfactual.py",
    "agentwatch/replay/engine.py",
    "agentwatch/rollback/engine.py",
    "agentwatch/scoring/confidence.py",
    "agentwatch/scoring/drift.py",
    "agentwatch/scoring/silence.py",
    "agentwatch/security/exfiltration.py",
    "agentwatch/security/owasp.py",
    "agentwatch/security/report.py",
    "agentwatch/security/sandbox.py",
    "agentwatch/tasks.py",
    "agentwatch/telemetry/collector.py",
    "agentwatch/telemetry/otel.py",
    "agentwatch/tracing/audit.py",
    "agentwatch/tracing/collector.py",
    "agentwatch/tracing/live.py",
    "agentwatch/tracing/sampling.py",
    "agentwatch/tracing/spans.py",
    "agentwatch/tracing/trajectory.py",
]
